--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,13 @@ language: bash
 services: docker
 
 env:
-  - VERSION=7.4-rc VARIANT=stretch/cli
-  - VERSION=7.4-rc VARIANT=stretch/apache
-  - VERSION=7.4-rc VARIANT=stretch/fpm
-  - VERSION=7.4-rc VARIANT=stretch/zts
+  - VERSION=7.4-rc VARIANT=buster/cli
+  - VERSION=7.4-rc VARIANT=buster/apache
+  - VERSION=7.4-rc VARIANT=buster/fpm
+  - VERSION=7.4-rc VARIANT=buster/zts
   - VERSION=7.4-rc VARIANT=alpine3.10/cli
   - VERSION=7.4-rc VARIANT=alpine3.10/fpm
   - VERSION=7.4-rc VARIANT=alpine3.10/zts
-  - VERSION=7.4-rc VARIANT=alpine3.9/cli
-  - VERSION=7.4-rc VARIANT=alpine3.9/fpm
-  - VERSION=7.4-rc VARIANT=alpine3.9/zts
   - VERSION=7.3 VARIANT=stretch/cli
   - VERSION=7.3 VARIANT=stretch/apache
   - VERSION=7.3 VARIANT=stretch/fpm
