--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: bash
 services: docker
 
 env:
-  - VERSION=7.4-rc VARIANT=buster/cli
-  - VERSION=7.4-rc VARIANT=buster/apache
-  - VERSION=7.4-rc VARIANT=buster/fpm
-  - VERSION=7.4-rc VARIANT=buster/zts
-  - VERSION=7.4-rc VARIANT=alpine3.10/cli
-  - VERSION=7.4-rc VARIANT=alpine3.10/fpm
-  - VERSION=7.4-rc VARIANT=alpine3.10/zts
+  - VERSION=7.4 VARIANT=buster/cli
+  - VERSION=7.4 VARIANT=buster/apache
+  - VERSION=7.4 VARIANT=buster/fpm
+  - VERSION=7.4 VARIANT=buster/zts
+  - VERSION=7.4 VARIANT=alpine3.10/cli
+  - VERSION=7.4 VARIANT=alpine3.10/fpm
+  - VERSION=7.4 VARIANT=alpine3.10/zts
   - VERSION=7.3 VARIANT=buster/cli
   - VERSION=7.3 VARIANT=buster/apache
   - VERSION=7.3 VARIANT=buster/fpm
