--- a/8.0-rc/buster/apache/Dockerfile
+++ b/8.0-rc/buster/apache/Dockerfile
@@ -121,9 +121,9 @@ ENV PHP_LDFLAGS="-Wl,-O1 -pie"
 
 ENV GPG_KEYS 1729F83938DA44E27BA0F4D3DBDB397470D12172 BFDDD28642824F8118EF77909B67A5C12229118F
 
-ENV PHP_VERSION 8.0.0rc1
-ENV PHP_URL="https://downloads.php.net/~carusogabriel/php-8.0.0rc1.tar.xz" PHP_ASC_URL="https://downloads.php.net/~carusogabriel/php-8.0.0rc1.tar.xz.asc"
-ENV PHP_SHA256="350a80e26561ec5b926e84d4f6cbbd76d54d7cb77444fd1b1a16310201fc0f7b" PHP_MD5=""
+ENV PHP_VERSION 8.0.0RC2
+ENV PHP_URL="https://downloads.php.net/~pollita/php-8.0.0RC2.tar.xz" PHP_ASC_URL="https://downloads.php.net/~pollita/php-8.0.0RC2.tar.xz.asc"
+ENV PHP_SHA256="97d8031ba1095c3222fc5725710ac18dc4f584e526cbcbfb2817146abb6891ec" PHP_MD5=""
 
 RUN set -eux; \
 	\
